Fix the text overflow on PermissionGrid. Missing table overflow....

--- a/PermissionGrid/src/style.less
+++ b/PermissionGrid/src/style.less
@@ -61,7 +61,7 @@
     }
     .grid-row {
         min-height: 40px;
-        height: auto;
+        height: fit-content;
         border: 1px solid @alto;
         border-top: none;
         .dnn-grid-cell {
